--- a/WSL/toc.yml
+++ b/WSL/toc.yml
@@ -22,6 +22,8 @@
       href: tutorials/wsl-vscode.md
     - name: Erste Schritte mit Git
       href: tutorials/wsl-git.md
+    - name: Erste Schritte mit Datenbanken
+      href: tutorials/wsl-database.md
     - name: Einrichten der GPU-Beschleunigung (NVIDIA CUDA/directml)
       href: tutorials/gpu-compute.md
 - name: Anleitungen
